// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox callbacks onSelectionAdd should be called on clicking on a suggestion 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-11-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-11-label"
            autocomplete="off"
            class="Combobox__wrapper"
            id="downshift-11-input"
            role="searchbox"
            tabindex="0"
            value=""
          >
            <span
              class="Combobox__selection"
            >
              <span>
                type here...
              </span>
            </span>
          </div>
          <ul
            aria-labelledby="downshift-11-label"
            class="List"
            id="downshift-11-menu"
            role="listbox"
          />
        </div>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Combobox rendering should initially render empty component correctly 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            class="Combobox__wrapper"
            id="downshift-0-input"
            role="searchbox"
            tabindex="0"
            value=""
          >
            <span
              class="Combobox__selection"
            >
              <span>
                type here...
              </span>
            </span>
          </div>
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
